<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">南区导览</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    
    <string name="welcome_guide_begin" translatable="false">guide_begin</string>
    <string name="welcome_guide_end" translatable="false">guide_end</string>
    <string name="welcome_btn_close_guide" translatable="false">马上开始</string>
    <string name="welcome_splash_text" translatable="false">splash_text</string>
    
    <string name="menu_main_for_route" translatable="false">Route Line</string>
    <string name="menu_main_for_share" translatable="false">Share Info</string>
    <string name="menu_main_for_image" translatable="false">Select Image</string>
    <string name="menu_main_for_picture" translatable="false">Picture Wall</string>
    <string name="menu_main_for_photo" translatable="false">Take Photo</string>
    
    <string name="border_top" translatable="false">border_top</string>
    <string name="border_bottom" translatable="false">border_bottom</string>
    <string name="image_url" translatable="false">image_url</string>
    <string name="image_position" translatable="false">position</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="loading">正在加载…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    
    <!-- Content descriptions -->
    <string name="descr_image" translatable="false">Image</string>
    <string name="menu_text" translatable="false">中山市南区导览助手</string>
    <string name="route_before_start_tv" translatable="false">起点</string>
    <string name="route_before_end_tv" translatable="false">终点</string>
    <string name="route_before_start_tv1" translatable="false">沙平公园</string>
    <string name="route_before_end_tv1" translatable="false">中山树木园</string>
    <string name="route_before_tip_tv" translatable="false">搜索历史</string>
    <string name="route_before_history_tv" translatable="false">然而并没有搜索历史</string>
    
    <!-- Login Activity -->
    <string name="login_editText_account_back" translatable="false">\t帐号</string>
    <string name="login_editText_password_back" translatable="false">\t密码</string>
    <string name="login_button" translatable="false">登录</string>
    <string name="login_checkbox_password" translatable="false">记住密码</string>
    <string name="login_checkbox_auto" translatable="false">自动登录</string>
    <string name="login_textView_register" translatable="false">快速注册</string>
    
    <!-- Register Activity -->
    <string name="textview_account" translatable="false">帐号</string>
    <string name="textview_password" translatable="false">密码</string>
    <string name="register_userinfo_camera">拍照</string>
    <string name="register_userinfo_picture">从相册获取</string>
    <string name="register_userinfo_crop">裁剪</string>
    <string name="register_userinfo_change_user_name_title">更改名字</string>
    <string name="register_userinfo_change_user_note_title">更改简介</string>
    <string name="register_userinfo_change_user_account_title">更改账号</string>
    <string name="register_userinfo_change_user_password_title">更改密码</string>
    <string name="register_userinfo_input_user_name_hint">好名字可以让你的朋友更容易记住你</string>
    <string name="register_userinfo_input_user_note_hint">自定义简介信息，给你带来更多吸引</string>
    <string name="register_userinfo_input_user_account_hint">请牢记修改后的账号，不要轻易透露</string>
    <string name="register_userinfo_input_user_password_hint">请牢记修改后的密码，不要轻易透露</string>
    <string name="register_userinfo_sign_up">提交</string>
    <string name="register_userinfo_girl">女</string>
    <string name="register_userinfo_boy">男</string>
    <string name="register_userinfo_user_icon">头像</string>
    <string name="register_userinfo_user_name">昵称</string>
    <string name="register_userinfo_user_gender">性别</string>
    <string name="register_userinfo_user_note">简介</string>
    <string name="register_userinfo_sign_user_info">用户信息</string>
    
    <string name="button_mine" translatable="false">我的</string>
    <string name="button_add" translatable="false">+</string>
    <string name="give_advice" translatable="false">输入反馈内容</string>
    
    <!-- Guide Text -->
    <string name="guide_first" translatable="false">寻找古村的记忆</string>
    <string name="guide_second" translatable="false">寻找古村的记忆</string>
    <string name="guide_button" translatable="false">立刻体验</string>
    
    <!-- Login Text -->
    <string name="login_title" translatable="false">请输入用户信息注册或登录</string>
    <string name="login_account_hint" translatable="false">邮箱/手机号</string>
    <string name="login_pin_hint" translatable="false">密码</string>
    <string name="login_register_button_text" translatable="false">注册</string>
    <string name="login_button_text" translatable="false">登录</string>
    <string name="login_third_patry_text" translatable="false">| 第三方登录 |</string>
    
    <!-- Main Text -->
    <string name="main_title" translatable="false">南区</string>
    <string name="main_sub_title" translatable="false">旅游导览</string>
    <string name="main_tv_liangdu" translatable="false">良都</string>
    <string name="main_tv_chengnan" translatable="false">城南</string>
    <string name="main_tv_maling" translatable="false">马岭</string>
    <string name="main_tv_beixi" translatable="false">北溪</string>
    
    <!-- ActionBar Text -->
    <string name="action_bar_check" translatable="false">概览</string>
    <string name="action_bar_advice" translatable="false">推荐路线</string>
    
    <!-- Culture Text -->
    <string name="culture_build" translatable="false">精典古建</string>
    <string name="culture_tree" translatable="false">名木古树</string>
    <string name="culture_hero" translatable="false">名人典故</string>
    <string name="culture_food" translatable="false">名店美食</string>
    <string name="culture_custom" translatable="false">名品民俗</string>
    <string name="culture_advice" translatable="false">推荐路线</string>
    
    <!-- ViewArea Text -->
    <string name="viewarea_name" translatable="false">|良都</string>
    <string name="viewarea_info" translatable="false">\u3000中山市良都中学位于人杰地灵、名人辈出的中山市重点侨乡——南区。学校初创于1956年，办学历史上经过三次合并和较大规模的布局调整，2003年由原良都初级中学和南区职业中学合并</string>
    <string name="item_view_name" translatable="false">|马应彪纪念馆</string>
    <string name="item_view_like" translatable="false">168人赞过</string>
    <string name="item_view_info" translatable="false">\u3000马应彪早年家庭贫苦，为了生计去澳洲悉尼谋生，在澳洲皈依基督教。1900年，筹集了一笔资金在香港筹办先施百货公司自任总监督。1914年，在广州长堤建立先施粤行，并附设东亚大酒店，总投资额为港币100万元，取得巨大成功。1917年，先施公司的业务扩展到上海。1921年，与蔡兴等创办了香港国民商业储蓄银行。</string>
    
    <!-- ViewDetail Text -->
    <string name="view_title_person" translatable="false">|人物简介编辑</string>
    <string name="view_title_activity" translatable="false">|社会活动编辑</string>
    <string name="view_content_person" translatable="false">\u3000马应彪早年家庭贫苦，为了生计去澳洲悉尼谋生，在澳洲皈依基督教。1900年，筹集了一笔资金在香港筹办先施百货公司自任总监督。1914年，在广州长堤建立先施粤行，并附设东亚大酒店，总投资额为港币100万元，取得巨大成功。1917年，先施公司的业务扩展到上海。1921年，与蔡兴等创办了香港国民商业储蓄银行。</string>
    <string name="view_content_activity" translatable="false">\u3000马应彪早年家庭贫苦，为了生计去澳洲悉尼谋生，在澳洲皈依基督教。1900年，筹集了一笔资金在香港筹办先施百货公司自任总监督。1914年，在广州长堤建立先施粤行，并附设东亚大酒店，总投资额为港币100万元，取得巨大成功。1917年，先施公司的业务扩展到上海。1921年，与蔡兴等创办了香港国民商业储蓄银行。</string>

    <!-- Mine Text -->
    <string name="info_name" translatable="false">昵称</string>
    <string name="info_sign" translatable="false">签名签名签名签名签名签名签名签名签名签名签名签名签名签名</string>
    <string name="info_picture" translatable="false">我的相册</string>
    <string name="info_advice" translatable="false">意见反馈</string>
    <string name="info_update" translatable="false">检测更新</string>
    <string name="info_logout" translatable="false">退出登录</string>
</resources>
