<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="6dip"
    android:paddingLeft="6dip"
    android:paddingRight="6dip" >

    <ImageView
        android:id="@+id/item_main_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:contentDescription="@string/descr_image"
        android:src="@drawable/ic_empty" />

    <TextView
        android:id="@+id/item_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dip"
        android:layout_below="@id/item_main_image"
        android:text="@string/item_view_name"
        android:textSize="12sp" />
    
    <ImageView
        android:id="@+id/item_like_image"
        android:layout_width="12dip"
        android:layout_height="12dip"
        android:layout_toLeftOf="@+id/item_like_num"
        android:layout_toStartOf="@+id/item_like_num"
        android:layout_alignBottom="@+id/item_main_title"
        android:contentDescription="@string/descr_image"
        android:src="@drawable/image_like_orange" />

    <TextView
        android:id="@+id/item_like_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/item_main_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/item_view_like"
        android:textSize="12sp" />
    
</RelativeLayout>