<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp" >

    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <com.daimajia.slider.library.Indicators.PagerIndicator
        android:id="@+id/custom_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom" >

        <TextView
            android:id="@+id/viewa_viewarea_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:layout_marginStart="6dip"
            android:layout_marginTop="12dip"
            android:text="@string/viewarea_name"
            android:textSize="18sp"
            android:textStyle="bold" />
        
        <ImageView
        	android:id="@+id/item_like_image"
        	android:onClick="onClick"
        	android:layout_width="14dip"
        	android:layout_height="14dip"
        	android:layout_alignBottom="@+id/viewa_viewarea_name"
        	android:layout_toLeftOf="@+id/item_like_num"
        	android:layout_toStartOf="@+id/item_like_num"
        	android:contentDescription="@string/descr_image"
        	android:src="@drawable/image_like_yellow" />

   		<TextView
        	android:id="@+id/item_like_num"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignBottom="@+id/viewa_viewarea_name"
        	android:layout_alignParentRight="true"
        	android:layout_alignParentEnd="true"
        	android:layout_marginRight="12dip"
        	android:layout_marginEnd="12dip"
        	android:text="@string/item_view_like"
        	android:textSize="12sp" />

        <TextView
            android:id="@+id/viewa_viewarea_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewa_viewarea_name"
            android:layout_marginLeft="6dip"
            android:layout_marginStart="6dip"
             android:layout_marginRight="6dip"
            android:layout_marginEnd="6dip"
            android:layout_marginTop="3dip"
            android:text="@string/viewarea_info"
            android:textColor="@color/gray"
            android:textSize="12sp" />
        
    </RelativeLayout>

</FrameLayout>