<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="50dip"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/action_bar_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:onClick="onClick"
        android:padding="14dip" >

        <ImageButton
            android:layout_width="40dip"
            android:layout_height="21dip"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:clickable="false"
            android:contentDescription="@string/descr_image"
            android:scaleType="fitXY"
            android:src="@drawable/image_back" />
    </RelativeLayout>

    <TextView
        android:id="@+id/action_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/register_userinfo_sign_user_info"
        android:textColor="@color/main_yellow"
        android:textSize="17sp" />

    <RelativeLayout
        android:id="@+id/action_bar_register"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="onClick"
        android:paddingRight="15dip"
        android:paddingEnd="15dip"
        android:paddingLeft="0dip"
        android:paddingStart="0dip" >

        <TextView
            android:layout_width="wrap_content"
        	android:layout_height="50dip"
        	android:gravity="center"
            android:clickable="false"
            android:text="@string/register_userinfo_sign_up"
            android:textColor="@color/main_yellow"
            android:textSize="17sp" />
    </RelativeLayout>

</RelativeLayout>