<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="50dip"
    android:paddingTop="15dip"
    android:paddingBottom="15dip"
    android:orientation="horizontal" >
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
        <ImageButton
        android:id="@+id/action_bar_btn_back"
        android:layout_width="40dip"
        android:layout_height="20dip"
        android:layout_marginLeft="15dip"
        android:src="@drawable/image_back"
        android:scaleType="fitXY"
        android:contentDescription="@string/descr_image"
        android:background="@color/transparent" />
    </RelativeLayout>
    
    <TextView
        android:id="@+id/action_bar_check"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/main_yellow"
        android:text="@string/action_bar_check" />
    
    <TextView
        android:id="@+id/action_bar_advice"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:text="@string/action_bar_advice" />
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
    <ImageButton
        android:id="@+id/action_bar_btn_share"
        android:layout_width="15dip"
        android:layout_height="20dip"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dip"
        android:src="@drawable/image_share"
        android:scaleType="fitXY"
        android:contentDescription="@string/descr_image"
        android:background="@color/transparent" />
    </RelativeLayout>
    
</LinearLayout>